--- a/ui/ui_options.ui
+++ b/ui/ui_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>626</width>
-    <height>600</height>
+    <height>612</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -40,7 +40,7 @@
         <x>0</x>
         <y>0</y>
         <width>608</width>
-        <height>545</height>
+        <height>557</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_5">
@@ -56,6 +56,15 @@
           <string>Document Composer</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
+          <property name="topMargin">
+           <number>6</number>
+          </property>
+          <property name="bottomMargin">
+           <number>6</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>4</number>
+          </property>
           <item row="0" column="2">
            <widget class="QToolButton" name="btn_template_folder">
             <property name="toolTip">
@@ -145,13 +154,6 @@
          </layout>
         </widget>
        </item>
-       <item row="10" column="1">
-        <widget class="QPushButton" name="upgradeButton">
-         <property name="text">
-          <string>Upgrade</string>
-         </property>
-        </widget>
-       </item>
        <item row="10" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
@@ -159,22 +161,11 @@
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
-        <widget class="QCheckBox" name="chk_logging">
-         <property name="text">
-          <string>Debug logging</string>
-         </property>
-        </widget>
-       </item>
        <item row="7" column="0" colspan="5">
         <layout class="QGridLayout" name="gridLayout_6">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label_6">
-           <property name="text">
-            <string>Supporting documents folder</string>
-           </property>
-          </widget>
-         </item>
+         <property name="verticalSpacing">
+          <number>4</number>
+         </property>
          <item row="0" column="1">
           <widget class="QLineEdit" name="txtRepoLocation">
            <property name="minimumSize">
@@ -228,7 +219,82 @@
            </property>
           </widget>
          </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Supporting documents folder</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="lblMapFile">
+           <property name="text">
+            <string>Import Map File</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="edtMapfile"/>
+         </item>
+         <item row="2" column="2">
+          <widget class="QToolButton" name="btnMapfile">
+           <property name="text">
+            <string>...</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources.qrc">
+             <normaloff>:/plugins/stdm/images/icons/open_file.png</normaloff>:/plugins/stdm/images/icons/open_file.png</iconset>
+           </property>
+          </widget>
+         </item>
         </layout>
+       </item>
+       <item row="0" column="0" colspan="4">
+        <layout class="QGridLayout" name="gridLayout_7" rowstretch="0">
+         <property name="horizontalSpacing">
+          <number>6</number>
+         </property>
+         <property name="verticalSpacing">
+          <number>4</number>
+         </property>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Set current profile</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QComboBox" name="cbo_profiles">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>30</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="10" column="1">
+        <widget class="QPushButton" name="upgradeButton">
+         <property name="text">
+          <string>Upgrade</string>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="0">
+        <widget class="QCheckBox" name="chk_logging">
+         <property name="text">
+          <string>Debug logging</string>
+         </property>
+        </widget>
        </item>
        <item row="3" column="0" colspan="5">
         <widget class="QGroupBox" name="groupBox">
@@ -236,6 +302,9 @@
           <string>Database Properties</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
+          <property name="bottomMargin">
+           <number>2</number>
+          </property>
           <item row="0" column="0" colspan="3">
            <widget class="QLabel" name="label_5">
             <property name="text">
@@ -262,6 +331,9 @@
               <layout class="QGridLayout" name="gridLayout">
                <property name="rightMargin">
                 <number>6</number>
+               </property>
+               <property name="verticalSpacing">
+                <number>2</number>
                </property>
                <item row="1" column="0">
                 <widget class="QLabel" name="label_3">
@@ -417,33 +489,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="0" column="0" colspan="4">
-        <layout class="QGridLayout" name="gridLayout_7" rowstretch="0">
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>Set current profile</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="1">
-          <widget class="QComboBox" name="cbo_profiles">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>30</height>
-            </size>
-           </property>
-          </widget>
-         </item>
-        </layout>
        </item>
       </layout>
      </widget>
