--- a/stdm/ui/mobile_data_provider/ui_mobile_provider_wizard.ui
+++ b/stdm/ui/mobile_data_provider/ui_mobile_provider_wizard.ui
@@ -78,6 +78,15 @@
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
+         <property name="html">
+          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:14pt; font-weight:600; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; vertical-align:sub;&quot;&gt;This wizard will enable you to export STDM native formats to a data provider format.&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; vertical-align:sub;&quot;&gt;&lt;br /&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; vertical-align:sub;&quot;&gt;Some of the current supported data providers include ODK, Kobo, QFields and Trimple&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -141,7 +150,7 @@
           <number>5</number>
          </property>
          <item>
-          <widget class="QListView" name="lvEntities">
+          <widget class="QListView" name="providerEntities">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
@@ -191,7 +200,7 @@
           <number>5</number>
          </property>
          <item>
-          <widget class="QTableView" name="tbvColumns">
+          <widget class="QTableView" name="providerEntityColumns">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>1</horstretch>
@@ -315,9 +324,9 @@
  </widget>
  <tabstops>
   <tabstop>txtMobileProviderIntroduction</tabstop>
-  <tabstop>lvEntities</tabstop>
+  <tabstop>providerEntities</tabstop>
   <tabstop>btnEditApperance</tabstop>
-  <tabstop>tbvColumns</tabstop>
+  <tabstop>providerEntityColumns</tabstop>
   <tabstop>txtHtml</tabstop>
  </tabstops>
  <resources/>
